feat(RUN-775): enforce current settings schema
